--- a/src/styles.css
+++ b/src/styles.css
@@ -3,7 +3,7 @@ body {
 }
 h1,
 li,
-footer {
+small {
   color: #233142;
   font-weight: 100;
   line-height: 28px;
@@ -24,9 +24,11 @@ li {
 .weather-app {
   border: 2px solid #233142;
   padding: 15px;
-  margin: 30px auto;
-  max-width: 600px;
   border-radius: 20px;
+}
+.weather-app-wrapper {
+  max-width: 600px;
+  margin: 30px auto;
 }
 a {
   outline: none;
